crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__repl_command_tests__palette_tests__palette_popup_navigated.snap
---
source: crates/crucible-cli/src/tui/testing/repl_command_tests.rs
expression: h.render()
---
                                                                                
                                                                                
  quit Exit the application                                                     
  help Show keybindings and commands                                            
> mode Cycle session mode                                                       
  agent Switch agent backend                                                    
  model Switch model (opens picker)                                             
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
